fix student box line height when text wraps

--- a/client/stylesheets/assets/components/_histogram-report.scss
+++ b/client/stylesheets/assets/components/_histogram-report.scss
@@ -158,3 +158,7 @@ $light-grid-color: #ddd;
     width: 175px;
   }
 }
+
+.student-box p {
+  line-height: 1.2;
+}
